@@ -1,3 +1,4 @@
+12/20/11 add drag constraint to MovableDragHandler
 12/20/11 drag handler for shaker and dropper
 12/20/11 model elements for shaker and dropper
 12/20/11 add some sim-sharing support
